<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="com.example.absolute.codepasta.ui.MainActivity">

    <TextView
        android:layout_weight="1"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login_text"
        android:textColor="@android:color/white"
        android:textSize="56sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:layout_gravity="center"
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:imeOptions="actionDone"
        android:hint="@string/hint_username"
        android:textSize="25sp" />


    <Button
        android:layout_marginTop="70dp"
        android:layout_weight="1"
        android:id="@+id/buttonDoneLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:onClick="doneLogin"
        android:text="@string/action_done"
        android:textSize="25sp"/>
</LinearLayout>
