<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:id="@+id/recyclerview_repos"
        android:layout_height="match_parent"
        tools:context="com.example.absolute.codepasta.ui.RepositoriesActivity">

    </android.support.v7.widget.RecyclerView>
    <TextView
        android:id="@+id/empty_text_view"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="17sp"
        android:text="@string/title_no_repositories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</FrameLayout>

