<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.absolute.codepasta.ui.PostActivity">
        <TextView
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:layout_gravity="center"
            android:text="@string/action_post_pasta"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:textSize="17sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:id="@+id/pasta_content_title"
            android:hint="@string/pasta_content_title"
            android:animateLayoutChanges="true"
            android:layout_height="wrap_content">
        </EditText>
        <android.support.design.widget.TextInputLayout
            app:errorEnabled="false"
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/description_edit_text"
                android:textSize="17sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_title" />
        </android.support.design.widget.TextInputLayout>
        <Switch
            android:id="@+id/private_switch"
            android:textSize="17sp"
            android:text = "@string/public_title"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/donePostButton"
            android:onClick="addNewPasta"
            android:text="@string/action_done"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/link_pasta_text_title"
            android:layout_marginTop="30dp"
            android:textSize="17sp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:textColor="@android:color/white"
            android:text="@string/title_url_pasta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textIsSelectable="true"
            android:id="@+id/link_pasta_text"
            tools:text="https://developer.github.com/v3/gists/#create-a-gist"
            android:layout_marginTop="5dp"
            android:textSize="15sp"

            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>

